Fixed button content position on mobile

--- a/src/Pages/Authenticated/Settings/Styles/Settings.scss
+++ b/src/Pages/Authenticated/Settings/Styles/Settings.scss
@@ -167,6 +167,10 @@
 
             .button-wrapper {
                 margin: 0;
+
+                button {
+                    justify-content: center;
+                }
             }
 
             .delete-or-deactive-wrapper {
